--- a/PDFtoTEXT.csproj
+++ b/PDFtoTEXT.csproj
@@ -5,13 +5,14 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="PdfiumViewer" Version="2.13.0" />
-		<PackageReference Include="PdfiumViewer.Native.x86_64.v8-xfa" Version="2018.4.8.256" />
+		<PackageReference Include="PDFiumCore" Version="134.0.6982" />
 		<PackageReference Include="PDFsharp" Version="6.1.1" />
-		<PackageReference Include="System.Drawing.Common" Version="9.0.3" />
+		<PackageReference Include="SkiaSharp" Version="3.118.0-preview.2.3" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.118.0-preview.2.3" />
 		<PackageReference Include="Telegram.Bot" Version="22.4.4" />
 		<PackageReference Include="Tesseract" Version="5.2.0" />
 		<PackageReference Include="TesseractOCR" Version="5.4.2" />
